--- a/server/api/package.json
+++ b/server/api/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dayjs": "^1.10.7",
     "express": "^4.17.1",
     "nodemon": "^2.0.13",
     "pg": "^8.7.1"
